# tasks_toolkit

./: CMakeLists.txt  README.md  package.xml  setup.py
examples/: simple_task.py
src/task_toolkit/activities/: runnable.py  task.py
src/task_toolkit/connections/operations/: operation_caller.py  operation_connector.py  operation_processor.py
src/task_toolkit/engine/: engine.py
src/tasks_toolkit/activities/: __init__.py  activity.py
src/tasks_toolkit/connections/operations/: __init__.py  operation.py  operation_caller.py  operation_connector.py  operation_processor.py
src/tasks_toolkit/connections/ports/: __init__.py  buffer_port.py  data_port.py
tests/: test_activity_internals.py  test_operation_caller.py
