<?xml version="1.0"?>
<package>

  <name>tasks_toolkit</name>

  <version>0.0.0</version>
  <description>rik_utilities package</description>
  <maintainer email="dgerod@xyz-lab.org.es">Diego Escudero</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

</package>
